Updated the header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,26 @@
 </head>
 <body>
 
-    <h3>Hello World<i class='bx bx-right-arrow-alt bx-fade-right hello'></i></h3>
+<!-- Header/navbar start here -->
+<nav>
+    <div class="navbar">
+        <div class="logo">
+            <a href="index.html"><h3>Influencer products</h3></a>
+        </div>
+        <div class="menu">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Sign up</a></li>
+                <li><a href="#">Log In</a></li>
+            </ul>
+            <div class="icons">
+                <a href="#"><img class="search" src="image/akar-icons_search.svg" alt=""></a>
+                <a href="#"><img class="cart" src="image/cartimage.svg" alt=""></a>
+            </div>
+        </div>
+    </div>
+</nav>   
 
 
 
