First section completed

--- a/index.html
+++ b/index.html
@@ -35,8 +35,28 @@
     </div>
 </nav>   
 
+<!-- Header/navbar end here -->
 
+<!-- Hero section start here -->
 
+<section class="hero">
+    <div class="container">
+        <div class="row">
+            <div class="twoColumn vertical-align-center">
+                <div class="heroInfo">
+                    <h1>Start your Journey as<br> Influencer</h1>
+                    <p>Hello Welcome to Influencer products. Here we are providing the best possible<br>services for your digital needs. feel fre to visit your product or contact us.</p>
+                    <button class="primaryButton"><a href="https://github.com/akib0079/">Prebook now</a><i class='bx bx-right-arrow-alt arrow' ></i></button>
+                </div>
+            </div>
+            <div class="twoColumn">
+                <div class="heroImage">
+                    <img src="image/Group 33137.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 
