Logo section added

--- a/index.html
+++ b/index.html
@@ -58,6 +58,24 @@
     </div>
 </section>
 
+<!-- hero section end here -->
+
+<!-- logo section start here -->
+
+<section class="logos">
+    <div class="container">
+        <div class="clientLogos">
+            <img src="image/Alibaba.svg" alt="">
+            <img src="image/Amazon.svg" alt="">
+            <img src="image/Daraz.pk Logo.svg" alt="">
+            <img src="image/Ebay.svg" alt="">
+            <img src="image/Rakuten.svg" alt="">
+            <img src="image/Walmart.svg" alt="">
+            <img src="image/Target.svg" alt="">
+        </div>
+    </div>
+</section>
+
 
 
 
