Collection section updated

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="heroInfo">
                     <h1>Start your Journey as<br> Influencer</h1>
                     <p>Hello Welcome to Influencer products. Here we are providing the best possible<br>services for your digital needs. feel fre to visit your product or contact us.</p>
-                    <button class="primaryButton"><a href="https://github.com/akib0079/">Prebook now</a><i class='bx bx-right-arrow-alt arrow' ></i></button>
+                    <button class="primaryButton"><a target="_blank" href="https://github.com/akib0079/">Prebook now</a><i class='bx bx-right-arrow-alt arrow'></i></button>
                 </div>
             </div>
             <div class="twoColumn">
@@ -76,7 +76,153 @@
     </div>
 </section>
 
+<!-- logo section end here -->
 
+<!-- Collection section start here -->
+
+<section class="collection">
+    <div class="container">
+        <div class="row">
+            <div class="collectionHeader center">
+                <h2>Popular Collection</h2>
+            </div>
+        </div>
+    </div>
+
+    <div class="collectionContainer">
+        <div class="collectionBoxes">
+            <div class="collectionBoxesInner">
+                <img src="image/tripod.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h3 class="price">$50.48</h3>
+                <div class="rating">
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                    <p>4.99</p>
+                </div>
+                <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+            <div class="collectionBoxesInner">
+                <img src="image/mic.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h3 class="price">$50.48</h3>
+                <div class="rating">
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                    <p>4.99</p>
+                </div>
+                <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+            <div class="collectionBoxesInner">
+                <img src="image/airpod.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h3 class="price">$50.48</h3>
+                <div class="rating">
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                    <p>4.99</p>
+                </div>
+                <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+            <div class="collectionBoxesInner">
+                <img src="image/drone.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h3 class="price">$50.48</h3>
+                <div class="rating">
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                    <p>4.99</p>
+                </div>
+                <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+            <div class="collectionBoxesInner">
+                <img src="image/lights.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h3 class="price">$50.48</h3>
+                <div class="rating">
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                    <p>4.99</p>
+                </div>
+                <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+            <div class="collectionBoxesInner">
+                <img src="image/setup.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h3 class="price">$50.48</h3>
+                <div class="rating">
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                    <p>4.99</p>
+                </div>
+                <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+            <div class="collectionBoxesInner">
+                <img src="image/camera.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h3 class="price">$50.48</h3>
+                <div class="rating">
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                    <p>4.99</p>
+                </div>
+                <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+            <div class="collectionBoxesInner">
+                <img src="image/single-light.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h3 class="price">$50.48</h3>
+                <div class="rating">
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                    <p>4.99</p>
+                </div>
+                <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+            <div class="collectionBoxesInner lstbox">
+                <img src="image/action.png" alt="">
+                <h3>Flex Tripod</h3>
+                <h3 class="price">$50.48</h3>
+                <div class="rating">
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                    <p>4.99</p>
+                </div>
+                <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+        </div>
+        <button class="seemore"><a href="#">See More</a><i class='bx bx-right-arrow-alt'></i></button>
+    </div>
+</section>
+
+<!-- Collection section end here -->
 
 
 
