Final touches were completed

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <section class="hero">
     <div class="container">
-        <div class="row">
+        <div class="row herorow">
             <div class="twoColumn vertical-align-center">
                 <div class="heroInfo">
                     <h1>Start your Journey as<br> Influencer</h1>
@@ -71,7 +71,7 @@
             <img src="image/Ebay.svg" alt="">
             <img src="image/Rakuten.svg" alt="">
             <img src="image/Walmart.svg" alt="">
-            <img src="image/Target.svg" alt="">
+            <img class="target" src="image/Target.svg" alt="">
         </div>
     </div>
 </section>
@@ -223,6 +223,71 @@
 </section>
 
 <!-- Collection section end here -->
+
+<!-- callToAction section start here -->
+
+<section class="callToActionsection">
+    <div class="container extra">
+        <div class="row vertical-align-center">
+            <div class="twoColumn">
+                <div class="callToActionInner">
+                    <h2>We're providing the best services<br> for your Business</h2>
+                    <div class="iconText">
+                        <i class='bx-pull-left bx bxs-quote-right'></i>
+                        <p>Hello Welcome to Influencer products. Here we are providing the best possible services for your digital needs. feel fre to visit your product or contact us.</p>
+                    </div>
+                    <div class="iconText">
+                        <i class='bx-pull-left bx bxs-caret-right-circle'></i>
+                        <p>Hello Welcome to Influencer products. Here we are providing the best possible services for your digital needs. feel fre to visit your product or contact us.</p>
+                    </div>
+                    <div class="numbers">
+                        <div class="numberInner">
+                            <h3>4,379</h3>
+                            <h5>Project Completed</h5>
+                            <p>Feel free to visit your product or contact us.</p>
+                        </div>
+                        <div class="numberInner">
+                            <h3>99%</h3>
+                            <h5>Customer Satisfaction</h5>
+                            <p>Feel free to visit your product or contact us.</p>
+                        </div>
+                    </div>
+                    <button class="primaryButton"><a target="_blank" href="https://github.com/akib0079/">Prebook now</a><i class='bx bx-right-arrow-alt arrow'></i></button>
+                </div>
+                
+            </div>
+
+            <div class="twoColumn">
+                <img class="CallToActionImg" src="image/pexels-fauxels-3184357 (1).jpg" alt="">
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- callToAction section end here -->
+
+<!-- Footer start here -->
+
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="oneColumn center">
+                <div class="footerInner">
+                    <h2>Influencer products</h2>
+                    <p>Copyright &copy 2020  influencer products<br>All rights reserved</p>
+                    <div class="socialIcons">
+                        <i class='bx bxl-facebook'></i>
+                        <i class='bx bxl-linkedin' ></i>
+                        <i class='bx bxl-instagram' ></i>
+                        <i class='bx bxl-twitter' ></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<!-- Footer end here -->
 
 
 
